isort & black agree

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ ignore =
 
 [isort]
 line_length = 88
-known_first_party = ntclient
+known_first_party = getmyancestors
 
 # See: https://copdips.com/2020/04/making-isort-compatible-with-black.html
 multi_line_output = 3
