--- a/.pylintrc
+++ b/.pylintrc
@@ -10,6 +10,7 @@ disable=
     consider-using-f-string,
     missing-module-docstring,
     missing-function-docstring,
+    duplicate-code,
     too-many-arguments,
     too-many-positional-arguments,
     too-many-instance-attributes,
