--- a/setup.cfg
+++ b/setup.cfg
@@ -27,16 +27,21 @@ exclude_lines =
 
 
 [pycodestyle]
-max-line-length = 88
+max-line-length = 100
 
 
 
 [flake8]
 per-file-ignores =
     # Allow unused imports in __init__.py files
-    ; __init__.py:F401,
+    getmyancestors/__init__.py:F401,
+    # Ignore E203 whitespace before ':' for thehse files
+    getmyancestors/classes/gedcom.py:E203
+    getmyancestors/classes/tree.py:E203
+    # Allow long lines in the translation file
+    getmyancestors/classes/translation.py:E501
 
-max-line-length = 88
+max-line-length = 100
 
 ignore =
     # line break before binary operator
