add mypy checking (a dozen or so errors to fix)

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ show_error_codes = True
 ;pretty = True
 
 disallow_incomplete_defs = True
-disallow_untyped_defs = True
+;disallow_untyped_defs = True
 disallow_untyped_calls = True
 disallow_untyped_decorators = True
 
