--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ include_trailing_comma = True
 
 [mypy]
 show_error_codes = True
+no_warn_no_return = True
 ;show_error_context = True
 ;pretty = True
 
@@ -80,4 +81,6 @@ warn_unused_ignores = True
 warn_unused_configs = True
 warn_incomplete_stub = True
 
-# Our tests, they don't return a value typically
+# 3rd party packages missing types
+[mypy-babelfish,diskcache]
+ignore_missing_imports = True
